@@ -678,3 +678,23 @@ imsettings_request_change_to(IMSettingsRequest *imsettings,
 
 	return retval;
 }
+
+gboolean
+imsettings_request_change_to_with_signal(IMSettingsRequest *imsettings,
+					 const gchar       *module)
+{
+	IMSettingsRequestPrivate *priv;
+	DBusMessage *message;
+
+	g_return_val_if_fail (IMSETTINGS_IS_REQUEST (imsettings), FALSE);
+
+	priv = IMSETTINGS_REQUEST_GET_PRIVATE (imsettings);
+	message = dbus_message_new_signal(priv->path, priv->interface, "ChangeTo");
+	dbus_message_append_args(message,
+				 DBUS_TYPE_STRING, module,
+				 DBUS_TYPE_INVALID);
+	dbus_connection_send(priv->connection, message, NULL);
+	dbus_message_unref(message);
+
+	return TRUE;
+}
